package com.directi.training.lsp.exercise;

public interface IPoweredDevice {
    void turnOn();
    void turnOff();
    boolean isOn();
} 